2010-01-16  Romain Francois <francoisromain@free.fr>

	* R/RcppLdPath.R : new script RcppCxx0xFlags() and Cxx0xFlags()
	that compile, load and call a simple C file in order to check 
	the compiler version and add the -std=c++0x flag

	* inst/discovery/cxx0x.c: discovery script. simple C script that 
	returns "-std=c++0x" if it is compiled with GCC >= 4.3 and 
	"" otherwise

2010-01-16  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/Environment.h: Environment gains a new_child method
	to create an environment enclosed by this
	* inst/unitTests/runit.environments.R: unit test for new_child

	* src/Rcpp/ExpressionVector.h: ExpressionVector gains a
	convenience methods eval to evaluate itself
	* inst/unitTests/runit.ExpressionVector.R: added unit tests
	for ExpressionVector::eval

	* src/Rcpp/ExpressionVector.h: ExpressionVector gains a
	constructor ExpressionVector( const std::string& ) that 
	parses the string as R code
	* inst/unitTests/runit.ExpressionVector.R: added unit tests
	to cover the new constructor

	* src/Rcpp/Environment.h : the Rcpp namespace is cached because
	we use it in many places and retrieving it is an "expensive"
	operation that requires a round trip to the R side
	* src/Evaluator.cpp: use the cached Rcpp namespace

	* R/Rcpp.package.skeleton: now generating example C++ and R
	code that uses Rcpp, also the generated Makevars contains
	a hack so that the generated package can pass check (after
	edition of Rd files, NAMESPACE, etc ...)
	* inst/skeleton: added example code used by the skeleton 
	generator

2010-01-15  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/NumericVector.h: cache the start of the array to
	improve performance of operator[]
	* src/NumericVector.cpp: idem

	* src/Rcpp/IntegerVector.h:
	* src/Rcpp/RawVector.h:
	* src/Rcpp/ComplexVector.h:
	* src/Rcpp/LogicalVector.h: idem

	* src/IntegerVector.cpp:
	* src/RawVector.cpp:
	* src/ComplexVector.cpp:
	* src/LogicalVector.cpp: idem
