@@ -41,7 +41,8 @@ test.Function.variadic <- function(){
 		funx <- cfunction(signature(x="function", y = "ANY"), '
 		Function sort(x) ;
 		return sort( y, Named("decreasing", true) ) ;
-		', Rcpp=TRUE, verbose=FALSE, includes = "using namespace Rcpp;" )
+		', Rcpp=TRUE, verbose=FALSE, includes = "using namespace Rcpp;",
+			cxxargs = "-std=c++0x" )
 		checkEquals( funx( sort, sample(1:20) ), 
 			20:1, msg = "calling function" )
 		checkException( funx(sort, sort), msg = "Function, R error -> exception" )
