@@ -47,7 +47,9 @@ test.IntegerVector.initializer.list <- function(){
 		IntegerVector x = {0,1,2,3} ;
 		for( int i=0; i<x.size(); i++) x[i] = x[i]*2 ;
 		return x ;', 
-			Rcpp=TRUE, verbose=FALSE, includes = "using namespace Rcpp;" )
+			Rcpp=TRUE, verbose=FALSE, 
+			includes = "using namespace Rcpp;",
+			cxxargs = "-std=c++0x" )
 		checkEquals( funx(), 2*0:3, msg = "IntegerVector( initializer list) " )
 	}
 }
