@@ -47,7 +47,8 @@ test.NumericVector.initializer.list <- function(){
 		NumericVector x = {0.0,1.0,2.0,3.0} ;
 		for( int i=0; i<x.size(); i++) x[i] = x[i]*2 ;
 		return x ;', 
-			Rcpp=TRUE, verbose=FALSE, includes = "using namespace Rcpp;" )
+			Rcpp=TRUE, verbose=FALSE, includes = "using namespace Rcpp;",
+			cxxargs = "-std=c++0x" )
 		checkEquals( funx(), as.numeric(2*0:3), msg = "NumericVector( initializer list) " )
 	}
 }
