@@ -40,13 +40,15 @@ test.Pairlist.variadic <- function(){
 	if( Rcpp:::canUseCXX0X() ){
 		funx <- cfunction(signature(), '
 		return Pairlist( "rnorm", 10, 0.0, 2.0 ) ;
-		', Rcpp=TRUE, verbose=FALSE, includes = "using namespace Rcpp;" )
+		', Rcpp=TRUE, verbose=FALSE, includes = "using namespace Rcpp;",
+			cxxargs = "-std=c++0x" )
 		checkEquals( funx(), pairlist("rnorm", 10L, 0.0, 2.0 ), 
 			msg = "variadic templates" )
 			
 		funx <- cfunction(signature(), '
 		return Pairlist( "rnorm", 10, Named("mean",0.0), 2.0 ) ;
-		', Rcpp=TRUE, verbose=FALSE, includes = "using namespace Rcpp;" )
+		', Rcpp=TRUE, verbose=FALSE, includes = "using namespace Rcpp;",
+			cxxargs = "-std=c++0x" )
 		checkEquals( funx(), pairlist("rnorm", 10L, mean = 0.0, 2.0 ), 
 			msg = "variadic templates (with names)" )
 	}
